fixed the circle misalignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,10 @@ html {
   font-display: swap;
 }
 
+html * {
+  box-sizing: inherit;
+}
+
 
 h1 {
   font-size: 20px;
@@ -17,16 +21,23 @@ p, li {
   letter-spacing: 1px;
 }
 
+
 /* radialinput */
-.radialinput {
-  flex: 0 0 58.33333%;
-  max-width: 58.33333%;
-  position: relative;
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
+.radial_flex {
+  display: flex;
+  box-sizing: border-box;
+  padding: 15px;
 }
 
+.radialinput {
+  position: relative;
+  width: 100%;
+  padding: 15px;
+
+
+}
+
+/* Contains both circle elements - controller and background */
 .circle_wrap {
 	position: relative;
 	width: 43vw;
@@ -36,6 +47,7 @@ p, li {
 	max-width: 600px;
 	max-height: 600px;
 }
+
 
 .circle {
 	position: absolute;
@@ -47,8 +59,9 @@ p, li {
 	z-index: 1;
 }
 
+/* This is the control button */
 .radial_control {
-	background-color: #0e89e7;
+	background-color: #0274cc;
 	color: #fff;
 	width: 48px;
 	height: 48px;
@@ -68,23 +81,24 @@ p, li {
 	height: 100%;
 }
 
-.radial_handle_wrap {
-	font-size: 30px;
-	font-weight: 700;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
+.radial_handle_elem {
+  font-size: 30px;
+  font-weight: 700;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
 }
 
-/* This is the backgroudn circle */
+/* This is the background circle */
 .circle_slider {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	border: 10px solid #0e0688;
+	border: 10px solid #2012e6;
 	border-radius: 50%;
 	z-index: 0;
 }
@@ -99,18 +113,43 @@ p, li {
 }
 
 .overlay1 {
+  position: absolute;
+  background-color: transparent;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: calc(100% + 10px);
+  transform-origin: 10px 50%;
+  transform: rotate(1.2356rad);
+  border-radius: 0 99999px 99999px 0;
+  border: 12px solid #ffffff;
+  
+  border-left: none;
+  margin-right: -1px;
+  margin-top: -1px;
+}
+
+.overlay_wrap2 {
+	position: absolute;
+	top: -10px;
+	left: -10px;
+	height: calc(100% + 22px);
+	width: calc(50% + 10px);
+	overflow: hidden;
+}
+
+.overlay2 {
 	position: absolute;
 	background-color: transparent;
 	top: 0;
-	right: 0;
+	left: 0;
 	height: 100%;
 	width: calc(100% + 10px);
-	transform-origin: 10px 50%;
-	transform: rotate(1.2356rad);
-	border-radius: 0 99999px 99999px 0;
-	border: 12px solid #09db14;
-	border-left: none;
-	margin-right: -1px;
+	transform-origin: calc(100% - 10px) center;
+	transform: rotate(0deg);
+	border: 12px solid #fff;
+	border-right: none;
+	border-radius: 9999px 0 0 9999px;
+	margin-left: -1px;
 	margin-top: -1px;
 }
-
